force-app/main/default/objects/CC_Config_FormWeb_Duplicado__mdt/CC_Config_FormWeb_Duplicado__mdt.object-meta.xml
<CustomObject>
    <description>Configuración para la entrada de casos duplicados por formulario web.</description>
    <label>Configuración Formulario Web Duplicado</label>
    <pluralLabel>Configuración Formularios Web Duplicados</pluralLabel>
</CustomObject>