force-app/main/default/objects/CC_Config_FormWeb_Duplicado__mdt/fields/CC_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Aplicacion__c</fullName>
    <description>Aplicación asociada al formulario web.</description>
    <inlineHelpText>Aplicación asociada al formulario web.</inlineHelpText>
    <label>Aplicacion</label>
    <length>25</length>
    <type>Text</type>
</CustomField>