force-app/main/default/objects/CC_Config_FormWeb_Duplicado__mdt/fields/CC_CasoEstado__c.field-meta.xml
<CustomField>
    <fullName>CC_CasoEstado__c</fullName>
    <description>Estado del caso duplicado a crear</description>
    <inlineHelpText>Estado del caso duplicado a crear</inlineHelpText>
    <label>Estado caso</label>
    <length>25</length>
    <type>Text</type>
</CustomField>