force-app/main/default/objects/CC_Config_FormWeb_Duplicado__mdt/fields/CC_Tiempo_Duplicidad__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_Duplicidad__c</fullName>
    <label>Tiempo duplicidad (minutos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>